moveos/moveos-stdlib/tests/cases/event/basic.exp
processed 3 tasks

task 2 'run'. lines 13-39:
Error: error[E04001]: restricted visibility
   ┌─ /var/folders/b7/gt6_vlj14mn6h8xk1x9ly6m40000gn/T/.tmpDdsmx4:27:48
   │  
27 │           events::emit_event<WithdrawEvent>(ctx, WithdrawEvent {
   │ ╭────────────────────────────────────────────────^
28 │ │             addr: sender_addr,
29 │ │             amount: 102,
30 │ │         });
   │ ╰─────────^ Invalid instantiation of '(test=0x42)::m::WithdrawEvent'.
All structs can only be constructed in the module in which they are declared

error[E03009]: unbound variable
   ┌─ /var/folders/b7/gt6_vlj14mn6h8xk1x9ly6m40000gn/T/.tmpDdsmx4:28:19
   │
28 │             addr: sender_addr,
   │                   ^^^^^^^^^^^ Invalid variable usage. Unbound variable 'sender_addr'


